--- a/app/src/main/res/layout/list_item_artist.xml
+++ b/app/src/main/res/layout/list_item_artist.xml
@@ -8,7 +8,7 @@ android:layout_height="match_parent">
 <TextView android:text="@string/list_item"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:id="@+id/listview_artist"
+    android:id="@+id/listview_artist_name"
     />
 
 </LinearLayout>
