--- a/app/src/main/res/layout/list_item_artist.xml
+++ b/app/src/main/res/layout/list_item_artist.xml
@@ -5,10 +5,13 @@ android:orientation="horizontal"
 android:layout_width="match_parent"
 android:layout_height="match_parent">
 
-<TextView android:text="@string/list_item"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/listview_artist_name"
-    />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/list_item_artist_image" />
+    <TextView android:text="@string/list_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listview_artist_name" />
 
 </LinearLayout>
