--- a/app/src/main/res/layout/list_item_artist.xml
+++ b/app/src/main/res/layout/list_item_artist.xml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:orientation="horizontal"
-android:layout_width="match_parent"
-android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin" >
 
     <ImageView
+        android:id="@+id/list_item_artist_image"
         android:layout_width="@dimen/artist_thumbnail_size"
         android:layout_height="@dimen/artist_thumbnail_size"
         android:scaleType="fitXY"
-        android:id="@+id/list_item_artist_image" />
-    <TextView android:text="@string/list_item"
-        android:layout_width="wrap_content"
+        />
+    <TextView
+        android:id="@+id/list_item_artist_name"
+        android:text="@string/list_item"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/list_item_artist_name" />
+        android:layout_centerInParent="true"
+        android:layout_toRightOf="@+id/list_item_artist_image"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        />
 
-</LinearLayout>
+</RelativeLayout>
